--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: ML CI/CD Pipeline
 
+# Trigger on push or PR to main
 on:
   push:
     branches: [ "main" ]
@@ -11,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1️⃣ Checkout code
-    - name: Checkout repository
+    # 1️⃣ Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
 
     # 2️⃣ Set up Python
@@ -28,7 +29,7 @@ jobs:
         pip install -r requirements.txt
         pip install pytest
 
-    # 4️⃣ Run model training
+    # 4️⃣ Train model
     - name: Train model
       run: python -m src.model
 
@@ -36,15 +37,18 @@ jobs:
     - name: API import check
       run: python -c "from src.api import app; print('API loaded successfully')"
 
-    # 6️⃣ Run tests
+    # 6️⃣ Run tests with PYTHONPATH
     - name: Run tests
-      run: pytest -v
+      run: |
+        echo "Setting PYTHONPATH for Linux CI"
+        export PYTHONPATH=$PWD
+        python -m pytest -v
 
     # 7️⃣ Build Docker image
     - name: Build Docker image
       run: docker build -t worker-scoring:latest .
 
-    # 8️⃣ Login to Docker Hub
+    # 8️⃣ Docker login
     - name: Docker login
       uses: docker/login-action@v2
       with:
