--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,62 +1,59 @@
-name: ML CI/CD Pipeline
+name: ML-CI-CD-Pipeline
 
-# Trigger on push or PR to main
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      IMAGE_NAME: worker-scoring
+      IMAGE_TAG: latest
+      DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/worker-scoring:latest
+
     steps:
-    # 1️⃣ Checkout repository
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # 2️⃣ Set up Python
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    # 3️⃣ Install dependencies
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
 
-    # 4️⃣ Train model
-    - name: Train model
-      run: python -m src.model
+      - name: Train model
+        run: python -m src.model
 
-    # 5️⃣ API import check
-    - name: API import check
-      run: python -c "from src.api import app; print('API loaded successfully')"
+      - name: API import check
+        run: python -c "from src.api import app; print('API loaded successfully')"
 
-    # 6️⃣ Run tests with PYTHONPATH
-    - name: Run tests
-      run: |
-        echo "Setting PYTHONPATH for Linux CI"
-        export PYTHONPATH=$PWD
-        python -m pytest -v
+      - name: Run tests
+        run: |
+          export PYTHONPATH=$PWD
+          python -m pytest -v
 
-    # 7️⃣ Build Docker image
-    - name: Build Docker image
-      run: docker build -t worker-scoring:latest .
+      - name: Build Docker image
+        run: docker build -t $IMAGE_NAME:$IMAGE_TAG .
 
-    # 8️⃣ Docker login
-    - name: Docker login
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      # فقط وقتی push روی main باشد اجرا شود
+      - name: Docker login
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # 9️⃣ Push Docker image
-    - name: Push Docker image
-      run: |
-        docker tag worker-scoring:latest ${{ secrets.DOCKER_USERNAME }}/worker-scoring:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/worker-scoring:latest
+      - name: Push Docker image
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker tag $IMAGE_NAME:$IMAGE_TAG $DOCKER_IMAGE
+          docker push $DOCKER_IMAGE
